--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -7,17 +7,16 @@
   "license": "MIT",
   "main": "src/index.ts",
   "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+    "lib": "lib"
   },
   "files": [
     "lib"
   ],
   "scripts": {
     "dev": "vite",
+    "test": "vite --config vite.config.test.ts",
     "build": "tsc && vite build",
-    "serve": "vite preview",
-    "rsw:build": "npm run build"
+    "serve": "vite preview"
   },
   "dependencies": {
     "dat.gui": "^0.7.7",
@@ -30,8 +29,10 @@
     "autoprefixer": "^10.4.0",
     "lerna": "^4.0.0",
     "postcss": "^8.4.4",
+    "puppeteer": "^12.0.1",
     "tailwindcss": "^2.2.19",
     "typescript": "^4.3.2",
-    "vite": "^2.5.0"
+    "vite": "^2.5.0",
+    "vite-plugin-test": "0.0.5"
   }
 }
