--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@perspective/website",
+  "name": "@perspective/components",
   "version": "0.0.0",
   "description": "Homepage of perspective.wiki",
   "author": "Swapnil Singh <mail@swapnilsingh.me>",
